tenants/ikedadev/prod/portfolio/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: ikedadev-prod
spec:
  selector:
    app: ikeda-portfolio
  ports:
    - port: 80
      targetPort: 80
